fixed overflow

--- a/web/src/Components/Footer/Footer.css
+++ b/web/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
     
     background-color:  #2c2c2c;
     position: relative;
-    width: 100%;
+    width: 100vw;
     color: rgb(206, 204, 204);    
 }
 
