--- a/web/src/Components/video/VideoPlayback.css
+++ b/web/src/Components/video/VideoPlayback.css
@@ -1,3 +1,3 @@
 .video{
-    top:auto;
+    object-fit: cover;
 }  
